# Lab5

./: CMakeLists.txt  README.md
.cache/clangd/index/: Chromosome.h.03AC1C949648F6DC.idx  GeneticAlgo.cpp.17F2F54995B6F9E5.idx  LocalSearch.cpp.C466D61AE30E2F45.idx  LocalSearch.h.9800236435D81235.idx  genetic_algorithm_test.cpp.DE46096087D39D79.idx  hello_test.cpp.A1584EA4FEF9B66D.idx  local_search_test.cpp.AC768BF8E09BC21B.idx
answers/: 20x20.sol  24x40.sol  30x50.sol  30x90.sol  37x53.sol
src/: CMakeLists.txt  main.cpp
src/genetic_algorithm/: CMakeLists.txt  Chromosome.h  GeneticAlgo.h
src/genetic_algorithm/Crossover/: CMakeLists.txt  CoinTossCrossover.h  Crossover.h
src/genetic_algorithm/Mutation/: CMakeLists.txt  GenMutation.h  Mutation.h
src/genetic_algorithm/Selection/: CMakeLists.txt  RandomSelection.h  Selection.h
src/local_search/: CMakeLists.txt  LocalSearch.cpp  LocalSearch.h
tests/: CMakeLists.txt  genetic_algorithm_test.cpp  local_search_test.cpp
